--- a/android/build.gradle
+++ b/android/build.gradle
@@ -72,6 +72,7 @@ android {
 
 dependencies {
     compile "com.dropbox.core:dropbox-core-sdk:$dropbox_version"
+    compile "com.android.support:support-compat:$appcompat_version"
     compile "com.android.support:appcompat-v7:$appcompat_version"
     compile "com.android.support:design:$appcompat_version"
     compile "com.android.support:recyclerview-v7:$appcompat_version"
@@ -81,6 +82,12 @@ dependencies {
     compile 'com.squareup.okhttp:okhttp:2.7.5'
     compile 'com.squareup.okhttp3:okhttp:3.5.0'
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+// Because RxAndroid releases are few and far between, it is recommended you also
+// explicitly depend on RxJava's latest version for bug fixes and new features.
+    compile 'io.reactivex.rxjava2:rxjava:2.1.2'
+
 }
 repositories {
     mavenCentral()
