--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -30,7 +30,8 @@
             <intent-filter>
 
                 <!-- Change this to be db- followed by your app key -->
-                <data android:scheme="db-YOUR_APP_KEY_HERE" />
+                <!-- app folder nameTalkingMemo -->
+                <data android:scheme="db-2yp4smqulkl7wtl" />
 
                 <action android:name="android.intent.action.VIEW" />
 
